Bug 959257 - Google's search box may not emit caret move events. r=tbsaunde